# tc-api-docs

./: .gitignore  README.md  deploy.sh  pyproject.toml
MCP/: Dockerfile  README.md  count_sdk_methods.py  requirements.txt  server.py  sse_server.py  verify_introspection.py  verify_server.py
examples/: menu.py
scripts/: build_sdk_schema.py
tc_api_sdk/: __init__.py  base.py  client.py  exceptions.py  models.py  resources.py  spec.py
tests/: test_client.py  test_mcp_server.py
