[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tc-api-sdk"
version = "0.1.0"
description = "Python SDK for the TutorCruncher API."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "TutorCruncher"}]
dependencies = [
    "requests>=2.32,<3.0",
]

[tool.setuptools.packages.find]
include = ["tc_api_sdk*"]

[tool.setuptools.package-data]
"tc_api_sdk" = ["generated/*.json"]
